# protocol

./: .eslintrc.js  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  license.txt  package-lock.json  package.json
.trunk/: .gitignore  trunk.yaml
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
ido-pool/: package-lock.json  package.json
migrations/: deploy.ts  tokens.ts
programs/invariant/: Cargo.toml
programs/invariant/core/: Cargo.toml
programs/invariant/core/src/: decimals.rs  lib.rs  math.rs
programs/invariant/core/src/structs/: fee_tier.rs  mod.rs  oracle.rs  pool.rs  position.rs  state.rs  tick.rs
programs/invariant/decimal/: Cargo.toml
programs/invariant/decimal/decimal_core/src/: checked_ops.rs  factories.rs  lib.rs  ops.rs  others.rs
programs/invariant/decimal/src/: lib.rs
programs/invariant/invariant-types/: Cargo.toml
programs/invariant/invariant-types/src/: decimals.rs  lib.rs  math.rs  utils.rs
programs/invariant/invariant-types/src/structs/: fee_tier.rs  mod.rs  pool.rs  tick.rs  tickmap.rs
programs/invariant/src/: decimal.rs  decimals.rs  errors.rs  lib.rs  log.rs  macros.rs  math.rs  old_decimal.rs  referral.rs  structs.rs  util.rs
programs/invariant/src/instructions/: change_fee_receiver.rs  change_liquidity.rs  change_protocol_fee.rs  claim_fee.rs  create_fee_tier.rs  create_pool.rs  create_position.rs  create_position_list.rs  create_state.rs  create_tick.rs  initialize_oracle.rs  mod.rs  remove_defunct_pool.rs  remove_position.rs  swap.rs  transfer_position_ownership.rs  update_seconds_per_liquidity.rs  withdraw_protocol_fee.rs
programs/invariant/src/interfaces/: mod.rs  send_tokens.rs  take_ref_tokens.rs  take_tokens.rs
programs/invariant/src/structs/: fee_growth.rs  fee_tier.rs  oracle.rs  pool.rs  position.rs  position_list.rs  state.rs  tick.rs  tickmap.rs  token_amount.rs
programs/staker/: Cargo.toml
programs/staker/src/: account.rs  context.rs  decimall.rs  decimals.rs  decimalss_old.rs  errors.rs  lib.rs  math.rs  util.rs
programs/staker/src/instructions/: close_stake_account.rs  close_stake_by_owner.rs  create_incentive.rs  end_incentive.rs  mod.rs  remove_stake.rs  stake.rs  withdraw.rs
programs/staker/src/state/: incentive.rs  mod.rs
programs/staker/src/structs/: incentive.rs  user_stake.rs
scripts/: big-faucet.ts  check-protocol-fee.ts  checks.ts  create-fee-tiers.ts  create-pool.ts  create-pools.ts  create-ticks.ts  fetch-all-ticks.ts  find-defunct-pools.ts  ftt-usdc-50-percentage.ts  init.ts  liquidity.ts  mint.ts  minter.ts  pool-addres.ts  pool-by-address.ts  referral-swap.ts  simulate.ts  state-validation.ts  swap.ts  test.ts  tokens.ts  transfer.ts  usdc-sol.ts  usdc-usdt-balance.ts  user-positions.ts  utils.ts  washTrading.ts
sdk/: package-lock.json  package.json  tsconfig.json
sdk-staker/: .gitignore  license.txt  package-lock.json  package.json
staker-sdk/: package-lock.json  package.json  tsconfig.json
stats/: .env  .gitignore  index.ts  package-lock.json  package.json  tsconfig.json  vercel.json
tests/: big-swap.spec.ts  claim.spec.ts  (+44 more)
tests-staker/: close-stake.spec.ts  create.spec.ts  end-incentive.spec.ts  math.spec.ts  multicall.spec.ts  position-change.spec.ts  remove-all-stakes.spec.ts  remove-stake.spec.ts  reward.spec.ts  stake.spec.ts  testUtils.ts  utils.ts  withdraw.spec.ts
(+310 files in other folders)
