[package]
name = "staker"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "staker"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]


[dependencies]
decimal = { path = "../invariant/decimal" }
anchor-lang = "0.21.0"
anchor-spl = "0.21.0"
integer-sqrt = "0.1.5"
uint = "0.9.1"
invariant = { path = "../invariant", features = ["cpi"] }
