[package]
name = "invariant-types"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anchor-lang = "0.25.0"
# borsh = "0.9.3"
borsh = {version = "0.9.3", features = ["const-generics"]}
# bytemuck = "1.11.0"
decimal = { path = "../decimal" }